<?xml version="1.0" encoding="utf-8"?>
<LinearLayout    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cagatay.ozata.project.HomepageActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="209dp"
        android:layout_height="117dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="140dp"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/meetus"
        android:textColor="#b7b8ba"
        android:textSize="12dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:background="@drawable/signin_rect"
        android:gravity="center_horizontal"
        android:onClick="buttonclick"
        android:paddingLeft="90dp"
        android:paddingTop="12dp"
        android:paddingRight="90dp"
        android:paddingBottom="12dp"
        android:text="@string/findpt"
        android:textColor="#ffffff"
        android:textSize="16dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/qr_rect"
        android:gravity="center_horizontal"
        android:onClick="buttonclick"
        android:paddingLeft="65dp"
        android:paddingTop="12dp"
        android:paddingRight="65dp"
        android:paddingBottom="12dp"
        android:text="@string/listmyfavs"
        android:textColor="#2dbcff"
        android:textSize="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        />




</LinearLayout>
