<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e4e0e0">

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="417dp"
        android:layout_height="49dp"
        android:layout_marginBottom="8dp"
        android:background="#cacaca"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/detail_back"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:src="@drawable/ic_left_arrow" />
    </FrameLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="68dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="114dp"
                    android:layout_height="103dp"
                    android:layout_marginTop="31dp"
                    android:layout_marginBottom="15dp"
                    app:layout_constraintBottom_toTopOf="@+id/textView10"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="58dp"
                    android:text="@string/trainer"
                    app:layout_constraintBottom_toTopOf="@+id/imageView8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="193dp"
                    android:text="@string/certified"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView6"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="29dp"
                    android:layout_marginEnd="28dp"
                    android:layout_marginBottom="48dp"
                    app:layout_constraintBottom_toTopOf="@+id/button"
                    app:layout_constraintEnd_toStartOf="@+id/textView7"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView7"
                    app:srcCompat="@drawable/ic_black_white_star" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="29dp"
                    android:layout_marginEnd="28dp"
                    android:layout_marginBottom="41dp"
                    app:layout_constraintBottom_toTopOf="@+id/imageView7"
                    app:layout_constraintEnd_toStartOf="@+id/textView12"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6"
                    app:srcCompat="@drawable/ic_user"/>

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="25dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="29dp"
                    android:layout_marginBottom="41dp"
                    app:layout_constraintBottom_toTopOf="@+id/imageView6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView8"
                    app:srcCompat="@drawable/ic_catalogue_1" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="13dp"
                    android:text="TextView"
                    app:layout_constraintBottom_toTopOf="@+id/textView6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView5" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="160dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="42dp"
                    android:layout_marginBottom="44dp"
                    android:text="@string/certified"
                    app:layout_constraintBottom_toTopOf="@+id/imageView6"
                    app:layout_constraintStart_toEndOf="@+id/imageView7"
                    app:layout_constraintTop_toBottomOf="@+id/textView12"
                    app:layout_constraintVertical_bias="1.0" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="29dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/signin_rect"
                    android:gravity="center_horizontal"
                    android:onClick="buttonclick"
                    android:paddingLeft="90dp"
                    android:paddingTop="12dp"
                    android:paddingRight="90dp"
                    android:paddingBottom="12dp"
                    android:text="@string/contact"
                    android:textColor="#ffffff"
                    android:textSize="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/button2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView6" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="23dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/qr_rect"
                    android:gravity="center_horizontal"
                    android:onClick="setFavorite"
                    android:paddingLeft="65dp"
                    android:paddingTop="12dp"
                    android:paddingRight="65dp"
                    android:paddingBottom="12dp"
                    android:text="@string/addtofav"
                    android:textColor="#2dbcff"
                    android:textSize="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginEnd="193dp"
                    android:text="TextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView8"
                    app:layout_constraintTop_toTopOf="@+id/imageView8" />

            </android.support.constraint.ConstraintLayout>
        </ScrollView>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>